<resources>
    <string name="app_name">kotlin_project</string>
    <string name="my_name">Aaditya Kumar Mittal</string>
    <string name="dob">DOB: 15th June, 2024</string>
    <string name="address">Ambala Cantt.</string>
    <string name="bio">Discipline is the strongest form of self-love. It is ignoring what you want now for something better on in your life.</string>
    <string name="like">Like ❤️</string>
    <string name="comment">Comment 👍</string>
    <string name="profile_image">Profile Image</string>
    <string name="registration">Enter your Registration Number</string>
    <string name="form_heading">A Basic Form Page</string>
    <string name="name_input">Enter your name</string>
    <string name="sample_image">Sample Image</string>
    <string name="enter_data">Enter the data</string>
    <string name="add_list">Add To List</string>
    <string name="vision">Empowering Education</string>
    <string name="string" translatable="false">Snackbar Display</string>
    <string name="gallery_button" translatable="false">Gallery Button</string>
    <string name="about_app" translatable="false">About App</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="snackbar_demo" translatable="false">SnackBar Demo</string>
    <string name="implicit_intents" translatable="false">Implicit Intents</string>
    <string name="explicit_intents" translatable="false">Explicit Intents</string>
    <string name="scroll_view" translatable="false">Scroll View</string>
    <string name="spinner_view" translatable="false">Spinner View</string>
    <string name="list_view" translatable="false">List View</string>
    <string name="app_localization" translatable="false">App Localization</string>
    <string name="enter_your_username" translatable="false">Enter your username</string>
    <string name="aaditya_kumar" translatable="false">Aaditya Kumar</string>
    <string name="male" translatable="false">Male</string>
    <string name="age_19" translatable="false">19</string>
    <string name="three_ducks">Three Ducks</string>
</resources>