<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/china"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/form_heading"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText11"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/name_input"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText22"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:hint="@string/registration"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold" />


    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="sans-serif"
        android:text="Submit"
        android:textSize="15sp" />


</LinearLayout>